Updated finance plugon to handle the userID implicitly
