# docs/swagger.json
@@ -14,40 +14,6 @@
     "basePath": "/",
     "paths": {
         "/investment": {
-            "post": {
-                "description": "Creates a new investment.",
-                "consumes": [
-                    "*/*"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "finance"
-                ],
-                "summary": "Create a investment.",
-                "parameters": [
-                    {
-                        "description": "investment to create",
-                        "name": "investment",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/finance.createInvestmentRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/finance.createInvestmentResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/investment/{userId}": {
             "get": {
                 "description": "fetch a single investment session.",
                 "produces": [
@@ -60,9 +26,10 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "user ID",
+                        "description": "User ID",
                         "name": "userId",
-                        "in": "path"
+                        "in": "header",
+                        "required": true
                     },
                     {
                         "type": "string",
@@ -88,6 +55,45 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/finance.getInvestmentResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Creates a new investment.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "finance"
+                ],
+                "summary": "Create a investment.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "userId",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "investment to create",
+                        "name": "investment",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/finance.createInvestmentRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/finance.createInvestmentResponse"
                         }
                     }
                 }
@@ -334,9 +340,6 @@
                 },
                 "investmentTime": {
                     "type": "integer"
-                },
-                "userId": {
-                    "type": "string"
                 }
             }
         },
